# Mosquito_Segmentation

./: .gitignore  pyproject.toml
src/mosquito_segment/: mosquito_app.py  mosquito_segment.py
