
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosquito-counter"
version = "1.0.0"
description = "A mosquito counting application using OpenCV and Gradio"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "gradio>=4.0.0",
    "pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[project.scripts]
mosquito-counter = "mosquito_counter:main"